<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id = "@+id/cardlayout"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:background = "@color/bg_100" >

        <TextView
            android:id = "@+id/financeIDscan"
            android:layout_width = "110dp"
            android:layout_height = "wrap_content"
            android:scrollbars="horizontal"
            android:background = "@drawable/cell_shape"
            android:ellipsize = "end"
            android:gravity="center"
            android:padding = "5dp"
            android:text = "@string/financeId"
            android:singleLine = "true" />

        <TextView
            android:id = "@+id/assetIDscan"
            android:layout_width = "120dp"
            android:layout_height = "wrap_content"
            android:scrollbars="horizontal"
            android:background = "@drawable/cell_shape"
            android:ellipsize = "end"
            android:gravity="center"
            android:padding = "5dp"
            android:text = "@string/assetCode"
            android:singleLine = "true" />

        <TextView
            android:id = "@+id/itemName"
            android:layout_width = "110dp"
            android:layout_height = "wrap_content"
            android:background = "@drawable/cell_shape"
            android:ellipsize = "end"
            android:gravity="center"
            android:padding = "5dp"
            android:text = "@string/itemName"
            android:singleLine = "true" />

        <TextView
            android:id = "@+id/status"
            android:layout_width = "120dp"
            android:layout_height = "wrap_content"
            android:background = "@drawable/cell_shape"
            android:ellipsize = "end"
            android:gravity="center"
            android:padding = "5dp"
            android:text = "@string/status"
            android:singleLine = "true" />
    </LinearLayout>
</LinearLayout>
</ScrollView>
