<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.1"
                            android:padding="10dp"
                            android:text="@string/tagId"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/bg_100"
                            android:orientation="horizontal"
                            android:layout_weight="0.9"
                            android:gravity="center">

                            <EditText
                                android:id="@+id/tagIdEt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/bg_100"
                                android:gravity="center"
                                android:hint="@string/tagIdEnterHint"
                                android:padding="10dp"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.proj8.idt_fa.Basic.CircleProgress
                android:id="@+id/circle_progress"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_gravity="center_horizontal"
                app:antiAlias="true"
                app:arcWidth="15dp"
                app:bgArcColor="@android:color/darker_gray"
                app:bgArcWidth="2dp"
                app:dottedLineWidth="6dp"
                app:foreEndColor="#F4F200"
                app:foreStartColor="#FE6615"
                app:hintSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.498"
                app:maxValue="100"
                app:startAngle="135"
                app:sweepAngle="270"
                app:textOffsetPercentInRadius="0.5"
                app:unit=""
                app:unitColor="@android:color/darker_gray"
                app:unitSize="15dp"
                app:value="0"
                app:valueColor="#FFCC1E"
                app:valueSize="70dp"
                tools:ignore="MissingClass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/scantv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg_500"
                android:text="@string/scanToSearch"
                android:textSize="22dp"/>

            <ImageView
                android:id="@+id/tagScanImg"
                android:visibility="visible"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_scanid"
                android:background="@android:color/transparent">
            </ImageView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>